resources/dsaas-stg/launchpad-preview/appdev.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: appdev
spec:
  host: appdev.prod-preview.openshift.io
  port:
    targetPort: "8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: launcher-documentation
    weight: 100
  wildcardPolicy: None
