resources/dsaas-stg/launchpad-preview/launcher-documentation.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: launcher-documentation
    template: launcher-documentation
  name: launcher-documentation
spec:
  host: launcher-preview.fabric8.io
  port:
    targetPort: "8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: launcher-documentation
    weight: 100
  wildcardPolicy: None
