resources/dsaas-stg/launchpad-preview/launcher.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: launcher-application
  name: launchpad
spec:
  host: launch.prod-preview.openshift.io
  port:
    targetPort: "8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: launcher-application
    weight: 100
  wildcardPolicy: None
