resources/dsaas-stg/launchpad-preview/launchpad-backend.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: source
  labels:
    service: launchpad-backend
  name: launchpad-backend
spec:
  host: forge.api.prod-preview.openshift.io
  port:
    targetPort: "8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: launcher-backend
    weight: 100
  wildcardPolicy: None
