resources/dsaas-stg/launchpad-preview/launchpad-creator-backend.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: source
  labels:
    service: launchpad-creator-backend
  name: launchpad-creator-backend
spec:
  host: forge.api.prod-preview.openshift.io
  path: /creator
  port:
    targetPort: "8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: launcher-creator-backend
    weight: 200
  wildcardPolicy: None
