resources/dsaas-stg/launchpad-preview/launchpad.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: launchpad-nginx
  name: launchpad
spec:
  host: launch.prod-preview.openshift.io
  port:
    targetPort: "8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: launcher-frontend
    weight: 100
  wildcardPolicy: None
